Added 3D bounding box visualization
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/kitti_data_exploration.ipynb
+++ b/notebooks/kitti_data_exploration.ipynb
@@ -21,7 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "import cv2\n",
-    "from typing import Dict, Any, List, Optional, Tuple"
+    "from typing import Dict, Any, List, Optional, Tuple\n",
+    "from math import sin, cos"
    ]
   },
   {
@@ -117,10 +118,13 @@
     "    show the KITTI images in the correct aspect ratio without passing the 80\n",
     "    character vertical margin in jupyter.\n",
     "    \"\"\"\n",
-    "    plt.imshow(load_image_into_numpy_array(filename))\n",
+    "    img = load_image_into_numpy_array(filename)\n",
+    "    plt.imshow(img)\n",
     "    fig = plt.gcf()\n",
     "    fig.set_size_inches(*fig_size)\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    plt.xlim((0, img.shape[1]))\n",
+    "    plt.ylim((img.shape[0], 0))"
    ]
   },
   {
@@ -274,7 +278,200 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# From 000008.png's calibration file.\n",
+    "P2_str = '7.215377000000e+02 0.000000000000e+00 6.095593000000e+02 4.485728000000e+01 0.000000000000e+00 7.215377000000e+02 1.728540000000e+02 2.163791000000e-01 0.000000000000e+00 0.000000000000e+00 1.000000000000e+00 2.745884000000e-03'\n",
+    "P2 = [float(num) for num in P2_str.split(' ')]\n",
+    "P2 = np.array(P2)\n",
+    "P2 = P2.reshape(3, 4)\n",
+    "print(P2)\n",
+    "R0_rect_str = '9.999239000000e-01 9.837760000000e-03 -7.445048000000e-03 -9.869795000000e-03 9.999421000000e-01 -4.278459000000e-03 7.402527000000e-03 4.351614000000e-03 9.999631000000e-01'\n",
+    "R0_rect = [float(num) for num in R0_rect_str.split(' ')]\n",
+    "R0_rect = np.array(R0_rect)\n",
+    "R0_rect = R0_rect.reshape(3, 3)\n",
+    "# Extend R0_rect to a 4x4 with a 1 in the bottom right corner and 0s everywhere else, as per KITTI readme.txt.\n",
+    "R0_rect = np.concatenate((R0_rect, np.zeros((1, 3))), axis=0)\n",
+    "R0_rect = np.concatenate((R0_rect, np.zeros((4, 1))), axis=1)\n",
+    "R0_rect[3, 3] = 1\n",
+    "print(R0_rect)\n",
+    "Tr_velo_to_cam_str = '7.533745000000e-03 -9.999714000000e-01 -6.166020000000e-04 -4.069766000000e-03 1.480249000000e-02 7.280733000000e-04 -9.998902000000e-01 -7.631618000000e-02 9.998621000000e-01 7.523790000000e-03 1.480755000000e-02 -2.717806000000e-01'\n",
+    "Tr_velo_to_cam = [float(num) for num in Tr_velo_to_cam_str.split(' ')]\n",
+    "Tr_velo_to_cam = np.array(Tr_velo_to_cam)\n",
+    "Tr_velo_to_cam = Tr_velo_to_cam.reshape(3, 4)\n",
+    "# Extend Tr_velo_to_cam to a 4x4 with a 1 in the bottom right corner and 0s everywhere else, as per KITTI readme.txt.\n",
+    "Tr_velo_to_cam = np.concatenate((Tr_velo_to_cam, np.zeros((1, 4))), axis=0)\n",
+    "Tr_velo_to_cam[3, 3] = 1\n",
+    "print(Tr_velo_to_cam)\n",
+    "# From 000008.png's label file.\n",
+    "pt_3d = np.expand_dims(np.array([-2.70, 1.74, 3.68]), axis=-1)\n",
+    "pt_2d = np.matmul(P2, np.concatenate((pt_3d, np.ones((1, pt_3d.shape[1]))), axis=0))\n",
+    "pt_2d[0, :] /= pt_2d[2, :]\n",
+    "pt_2d[1, :] /= pt_2d[2, :]\n",
+    "pt_2d[2, :] *= 0\n",
+    "print(pt_2d)\n",
+    "x = np.matmul(np.matmul(np.matmul(P2, R0_rect), Tr_velo_to_cam), y)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FACE_IDX = np.array([[0, 1, 5, 4], # Front\n",
+    "                     [1, 2, 6, 5], # Left\n",
+    "                     [2, 3, 7, 6], # Back\n",
+    "                     [3, 0, 4, 7]]) # Right\n",
+    "# From 000008.png's label file.\n",
+    "label = 'Car 0.88 3 -0.69 0.00 192.37 402.31 374.00 1.60 1.57 3.23 -2.70 1.74 3.68 -1.29'\n",
+    "label_arr = label.split(' ')\n",
+    "obj = {}\n",
+    "obj['type'] = label_arr[0]\n",
+    "obj['truncation'] = float(label_arr[1])\n",
+    "obj['occlusion'] = int(label_arr[2])\n",
+    "obj['alpha'] = float(label_arr[3])\n",
+    "obj['x1'] = float(label_arr[4])\n",
+    "obj['y1'] = float(label_arr[5])\n",
+    "obj['x2'] = float(label_arr[6])\n",
+    "obj['y2'] = float(label_arr[7])\n",
+    "obj['height'] = float(label_arr[8])\n",
+    "obj['width'] = float(label_arr[9])\n",
+    "obj['length'] = float(label_arr[10])\n",
+    "obj['tx'] = float(label_arr[11])\n",
+    "obj['ty'] = float(label_arr[12])\n",
+    "obj['tz'] = float(label_arr[13])\n",
+    "obj['ry'] = float(label_arr[14])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_obj_from_label_line(label_line):\n",
+    "    label_arr = label_line.split(' ')\n",
+    "    obj = {}\n",
+    "    obj['type'] = label_arr[0]\n",
+    "    obj['truncation'] = float(label_arr[1])\n",
+    "    obj['occlusion'] = int(label_arr[2])\n",
+    "    obj['alpha'] = float(label_arr[3])\n",
+    "    obj['x1'] = float(label_arr[4])\n",
+    "    obj['y1'] = float(label_arr[5])\n",
+    "    obj['x2'] = float(label_arr[6])\n",
+    "    obj['y2'] = float(label_arr[7])\n",
+    "    obj['height'] = float(label_arr[8])\n",
+    "    obj['width'] = float(label_arr[9])\n",
+    "    obj['length'] = float(label_arr[10])\n",
+    "    obj['tx'] = float(label_arr[11])\n",
+    "    obj['ty'] = float(label_arr[12])\n",
+    "    obj['tz'] = float(label_arr[13])\n",
+    "    obj['ry'] = float(label_arr[14])\n",
+    "    return obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def project_to_image(pts_3D, P):\n",
+    "    #input: pts_3D: 3xn matrix\n",
+    "    #       P:      3x4 projection matrix\n",
+    "    #output: pts_2D: 2xn matrix\n",
+    "    # project in image\n",
+    "    pts_3D_ones = np.concatenate((pts_3D, np.ones((1, pts_3D.shape[1]))), axis=0)\n",
+    "    pts_2D = np.matmul(P, pts_3D_ones)\n",
+    "    # scale projected points\n",
+    "    pts_2D[0, :] = pts_2D[0, :] / pts_2D[2, :]\n",
+    "    pts_2D[1, :] = pts_2D[1, :] / pts_2D[2, :]\n",
+    "    pts_2D = pts_2D[:2, :]\n",
+    "    return pts_2D    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_box_3d(obj, P):\n",
+    "    # Rotation matrix around yaw axis.\n",
+    "    R = [[+cos(obj['ry']), 0, +sin(obj['ry'])],\n",
+    "         [0, 1, 0],\n",
+    "         [-sin(obj['ry']), 0, +cos(obj['ry'])]]\n",
+    "    R = np.array(R)\n",
+    "    # 3D bounding box dimensions and corners.\n",
+    "    l = obj['length']\n",
+    "    w = obj['width']\n",
+    "    h = obj['height']\n",
+    "    x_corners = [l / 2, l / 2, -l / 2, -l / 2, l / 2, l / 2, -l / 2, -l / 2]\n",
+    "    y_corners = [0, 0, 0, 0, -h, -h, -h, -h]\n",
+    "    z_corners = [w / 2, -w / 2, -w / 2, w / 2, w / 2, -w / 2, -w / 2, w / 2]\n",
+    "    corners_centered = np.array([x_corners, y_corners, z_corners])\n",
+    "    # Rotate and translate 3D bounding box.\n",
+    "    corners_3D = np.matmul(R, corners_centered)\n",
+    "    corners_3D[0, :] = corners_3D[0, :] + obj['tx']\n",
+    "    corners_3D[1, :] = corners_3D[1, :] + obj['ty']\n",
+    "    corners_3D[2, :] = corners_3D[2, :] + obj['tz']\n",
+    "    # Only draw 3D bounding box for objects in front of the camera.\n",
+    "    if np.any(corners_3D[2, :] < 0.1):\n",
+    "        return None\n",
+    "    # Project the 3D bounding box into the image plane.\n",
+    "    corners_2D = project_to_image(corners_3D, P)\n",
+    "    return corners_2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_image_3d_boxes(filename: str,\n",
+    "                           image_labels: List[str],\n",
+    "                           fig_size: Tuple[float, float] = (9.0, 2.75)) -> None:\n",
+    "    \"\"\"Displays the image at filename with its 3D bounding boxes.\n",
+    "    :param filename: The path to the image.\n",
+    "    :param image_labels: The image's labels.\n",
+    "    :param fig_size: The size of the output, in inches.\n",
+    "    \"\"\"\n",
+    "    display_image(filename, fig_size=fig_size)\n",
+    "    ax = plt.gca()\n",
+    "    #for line in image_labels:\n",
+    "    #    # TODO get 3D box and draw it.\n",
+    "    #    # See https://github.com/smallcorgi/3D-Deepbox/tree/master/visualization\n",
+    "    #    # computeBox3D.m and then projectToImage.m       \n",
+    "    #    pass\n",
+    "    # TODO go through all the label lines.\n",
+    "    for line in image_labels:\n",
+    "        obj = get_obj_from_label_line(line)\n",
+    "        corners = compute_box_3d(obj, P2)\n",
+    "        if corners is not None:\n",
+    "            for face in range(4):\n",
+    "                ax.plot(corners[0, FACE_IDX[face, :]], corners[1, FACE_IDX[face, :]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_box_3d(obj, P2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image_3d_boxes(os.path.join(TRAIN_IMAGE_DIR, example_filename),\n",
+    "                      labels[example_filename])"
+   ]
   },
   {
    "cell_type": "code",
