Changed yolo paths
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/model_2d_bounding_box.ipynb
+++ b/notebooks/model_2d_bounding_box.ipynb
@@ -67,9 +67,9 @@
    "source": [
     "# Global constants.\n",
     "YOLO_MODEL_INPUT_SHAPE = (608, 608, 3)\n",
-    "CLASS_NAMES = read_classes('model_data/coco_classes.txt')\n",
-    "ANCHORS = read_anchors('model_data/yolo_anchors.txt')\n",
-    "YOLO_MODEL_PATH = 'yolo_model/yolo.h5'"
+    "CLASS_NAMES = read_classes('yolo_config/coco_classes.txt')\n",
+    "ANCHORS = read_anchors('yolo_config/yolo_anchors.txt')\n",
+    "YOLO_MODEL_PATH = 'yolo_config/yolo.h5'"
    ]
   },
   {
