Added predictions on KITTI
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/model_2d_bounding_box.ipynb
+++ b/notebooks/model_2d_bounding_box.ipynb
@@ -11,23 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import statements.\n",
     "import os\n",
     "import imageio\n",
+    "from tqdm import tqdm\n",
+    "from PIL import Image\n",
     "import numpy as np\n",
-    "from typing import Tuple, Optional\n",
+    "from typing import Tuple, Optional, Dict\n",
     "from matplotlib.pyplot import imshow\n",
     "import tensorflow as tf\n",
     "from keras import backend as K\n",
@@ -61,15 +55,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global constants.\n",
     "YOLO_MODEL_INPUT_SHAPE = (608, 608, 3)\n",
-    "CLASS_NAMES = read_classes('yolo_config/coco_classes.txt')\n",
-    "ANCHORS = read_anchors('yolo_config/yolo_anchors.txt')\n",
-    "YOLO_MODEL_PATH = 'yolo_config/yolo.h5'"
+    "CLASS_NAMES = read_classes(os.path.join('yolo_config', 'coco_classes.txt'))\n",
+    "ANCHORS = read_anchors(os.path.join('yolo_config', 'yolo_anchors.txt'))\n",
+    "YOLO_MODEL_PATH = os.path.join('yolo_config', 'yolo.h5')\n",
+    "KITTI_CLASSES = ['Car', 'Van', 'Truck', 'Pedestrian', 'Person_sitting',\n",
+    "                 'Cyclist', 'Tram', 'Misc', 'DontCare']\n",
+    "COCO_TO_KITTI_CLASS = {\n",
+    "    'car': 'Car',\n",
+    "    'truck': 'Truck',\n",
+    "    'person': 'Pedestrian'}\n",
+    "INVALID_TRUNCATION = -1\n",
+    "INVALID_OCCLUSION = -1\n",
+    "INVALID_ALPHA = -10\n",
+    "INVALID_3D_HWL = -1\n",
+    "INVALID_3D_LOC = -1000\n",
+    "INVALID_RY = -10\n",
+    "TRAIN_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
+    "                               'training', 'image_2')\n",
+    "TRAIN_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
+    "                               'testing', 'image_2')\n",
+    "TRAIN_PREDICT_DIR = os.path.join('..', 'data', 'predictions', '2d_boxes',\n",
+    "                                 'train')\n",
+    "TEST_PREDICT_DIR = os.path.join('..', 'data', 'predictions', '2d_boxes',\n",
+    "                                'test')"
    ]
   },
   {
@@ -397,6 +411,150 @@
     "# Predicting 2D bounding boxes on KITTI\n",
     "\n",
     "Now that we have the 2D bounding box (YOLO) model working, we need to predict all of the bounding boxes on KITTI train and test datasets such that the output can be used by the 3D bounding box model. That means we need to output 2 directories of prediction files (for '000001.png', it would be '000001.txt') for training and test images. Each text file needs to be formatted according to the KITTI label file specifications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_yolo_predictions(out_scores: np.ndarray, out_boxes: np.ndarray,\n",
+    "                           out_classes: np.ndarray, height: int, width: int,\n",
+    "                           dst_filename: str) -> None:\n",
+    "    \"\"\"Writes the predicted 2D bounding boxes to the destination file. This is\n",
+    "    based on writeLabels.m in the KITTI devkit.\n",
+    "    :param out_scores: The scores output from the YOLO model prediction.\n",
+    "    :param out_boxes: The boxes output from the YOLO model prediction.\n",
+    "    :param out_classes: The class probabilities output from the YOLO model\n",
+    "    prediction.\n",
+    "    :param height: The image height.\n",
+    "    :param width: The image width.\n",
+    "    :param dst_filename: The filename at which to save the labels.\n",
+    "    \"\"\"\n",
+    "    output_lines = []\n",
+    "    for i, c in reversed(list(enumerate(out_classes))):\n",
+    "        coco_class = CLASS_NAMES[c]\n",
+    "        if coco_class not in COCO_TO_KITTI_CLASS:\n",
+    "            kitti_class = 'Misc'\n",
+    "        else:\n",
+    "            kitti_class = COCO_TO_KITTI_CLASS[coco_class]\n",
+    "        box = out_boxes[i]\n",
+    "        top, left, bottom, right = box\n",
+    "        top = max(0, np.floor(top + 0.5).astype('int32'))\n",
+    "        left = max(0, np.floor(left + 0.5).astype('int32'))\n",
+    "        bottom = min(height, np.floor(bottom + 0.5).astype('int32'))\n",
+    "        right = min(width, np.floor(right + 0.5).astype('int32'))\n",
+    "        score = out_scores[i]\n",
+    "        label_line = ('{0} {1} {2} {3} {4} {5} {6} {7} {8} {9} {10} {11} '\n",
+    "                      '{12} {13} {14} {15}').format(\n",
+    "            kitti_class,\n",
+    "            INVALID_TRUNCATION,\n",
+    "            INVALID_OCCLUSION,\n",
+    "            INVALID_ALPHA,\n",
+    "            left, top, right, bottom,\n",
+    "            INVALID_3D_HWL, INVALID_3D_HWL, INVALID_3D_HWL,\n",
+    "            INVALID_3D_LOC, INVALID_3D_LOC, INVALID_3D_LOC,\n",
+    "            INVALID_RY,\n",
+    "            score)\n",
+    "        output_lines.append(label_line)\n",
+    "    with open(dst_filename, 'w') as outfile:\n",
+    "        outfile.write('\\n'.join(output_lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_image_height_width(image_file: str) -> Tuple[int, int]:\n",
+    "    \"\"\"Returns the height and width of the image. Because PIL's Image.open() is\n",
+    "    lazy, this does not load the image into memory.\n",
+    "    :param image_file: The image filename.\n",
+    "    :return: A tuple of the image height and width.\n",
+    "    \"\"\"\n",
+    "    with Image.open(image_file) as image:\n",
+    "        return image.size[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_on_dir(\n",
+    "    yolo_model: tf.keras.Model,\n",
+    "    sess: tf.Session,\n",
+    "    image_dir: str) -> \\\n",
+    "    Dict[str, Tuple[np.ndarray, np.ndarray, np.ndarray]]:\n",
+    "    \"\"\"Runs the YOLO graph stored in the session on the image.\n",
+    "    :param yolo_model: The YOLO model.\n",
+    "    :param sess: The TensorFlow/Keras session containing the YOLO graph.\n",
+    "    :param image_dir: The path to the image directory on which to predict.\n",
+    "    :return: A dictionary where the keys are the filenames and the values are\n",
+    "    tuple of scores, boxes, classes for the boxes found by YOLO.\n",
+    "    \"\"\"\n",
+    "    result = {}\n",
+    "    for image_file in tqdm(os.listdir(image_dir)):\n",
+    "        result[image_file] = predict_on_image(\n",
+    "            yolo_model, sess, os.path.join(image_dir, image_file))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_predictions_on_dir(\n",
+    "    predictions: Dict[str, Tuple[np.ndarray, np.ndarray, np.ndarray]],\n",
+    "    image_dir: str,\n",
+    "    output_dir: str) -> None:\n",
+    "    \"\"\"Writes the predicted 2D bounding boxes to the destination directory.\n",
+    "    :param predictions: The predictions on all image files in image_dir.\n",
+    "    :param image_dir: The directory containing the images.\n",
+    "    :param output_dir: The directory to which to save output files.\n",
+    "    \"\"\"\n",
+    "    for image_file in predictions:\n",
+    "        output_file = image_file.replace('.png', '.txt')\n",
+    "        out_scores, out_boxes, out_classes = predictions[image_file]\n",
+    "        height, width = get_image_height_width(os.path.join(\n",
+    "            image_dir, image_file))\n",
+    "        write_yolo_predictions(out_scores, out_boxes, out_classes,\n",
+    "                               height, width, os.path.join(\n",
+    "                                   output_dir, output_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "height, width = get_image_height_width(test_image)\n",
+    "write_yolo_predictions(out_scores, out_boxes, out_classes, height, width,\n",
+    "                       'test_out.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 72/7518 [04:42<10:50:32,  5.24s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "kitti_train_predictions = predict_on_dir(yolo_model, sess, TRAIN_IMAGE_DIR)\n",
+    "write_predictions_on_dir(kitti_train_predictions, TRAIN_IMAGE_DIR, TRAIN_PREDICT_DIR)"
    ]
   },
   {
