Added predictions on test
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/model_2d_bounding_box.ipynb
+++ b/notebooks/model_2d_bounding_box.ipynb
@@ -548,7 +548,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 72/7518 [04:42<10:50:32,  5.24s/it]"
+      "  4%|▎         | 281/7518 [38:30<28:25:30, 14.14s/it]"
      ]
     }
    ],
@@ -562,7 +562,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kitti_test_predictions = predict_on_dir(yolo_model, sess, TEST_IMAGE_DIR)\n",
+    "write_predictions_on_dir(kitti_test_predictions, TEST_IMAGE_DIR, TEST_PREDICT_DIR)"
+   ]
   }
  ],
  "metadata": {
