--- a/notebooks/model_2d_bounding_box.ipynb
+++ b/notebooks/model_2d_bounding_box.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,8 @@
     "INVALID_RY = -10\n",
     "TRAIN_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
     "                               'training', 'image_2')\n",
-    "TRAIN_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
-    "                               'testing', 'image_2')\n",
+    "TEST_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
+    "                              'testing', 'image_2')\n",
     "TRAIN_PREDICT_DIR = os.path.join('..', 'data', 'predictions', '2d_boxes',\n",
     "                                 'train')\n",
     "TEST_PREDICT_DIR = os.path.join('..', 'data', 'predictions', '2d_boxes',\n",
@@ -480,24 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_on_dir(\n",
     "    yolo_model: tf.keras.Model,\n",
     "    sess: tf.Session,\n",
-    "    image_dir: str) -> \\\n",
+    "    image_dir: str,\n",
+    "    max_images: Optional[int] = None) -> \\\n",
     "    Dict[str, Tuple[np.ndarray, np.ndarray, np.ndarray]]:\n",
     "    \"\"\"Runs the YOLO graph stored in the session on the image.\n",
     "    :param yolo_model: The YOLO model.\n",
     "    :param sess: The TensorFlow/Keras session containing the YOLO graph.\n",
     "    :param image_dir: The path to the image directory on which to predict.\n",
+    "    :param max_images: If specified, the maximum number of images on which to\n",
+    "    predict.\n",
     "    :return: A dictionary where the keys are the filenames and the values are\n",
     "    tuple of scores, boxes, classes for the boxes found by YOLO.\n",
     "    \"\"\"\n",
     "    result = {}\n",
-    "    for image_file in tqdm(os.listdir(image_dir)):\n",
+    "    image_files = os.listdir(image_dir)\n",
+    "    if max_images is not None:\n",
+    "        image_files = image_files[:max_images]\n",
+    "    for image_file in tqdm(image_files):\n",
     "        result[image_file] = predict_on_image(\n",
     "            yolo_model, sess, os.path.join(image_dir, image_file))\n",
     "    return result"
@@ -543,18 +549,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitti_train_predictions = predict_on_dir(yolo_model, sess, TRAIN_IMAGE_DIR,\n",
+    "                                         max_images=100)\n",
+    "write_predictions_on_dir(kitti_train_predictions, TRAIN_IMAGE_DIR,\n",
+    "                         TRAIN_PREDICT_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▎         | 281/7518 [38:30<28:25:30, 14.14s/it]"
+      "100%|██████████| 100/100 [45:34<00:00, 27.35s/it]\n"
      ]
     }
    ],
    "source": [
-    "kitti_train_predictions = predict_on_dir(yolo_model, sess, TRAIN_IMAGE_DIR)\n",
-    "write_predictions_on_dir(kitti_train_predictions, TRAIN_IMAGE_DIR, TRAIN_PREDICT_DIR)"
+    "kitti_test_predictions = predict_on_dir(yolo_model, sess, TEST_IMAGE_DIR,\n",
+    "                                        max_images=100)\n",
+    "write_predictions_on_dir(kitti_test_predictions, TEST_IMAGE_DIR,\n",
+    "                         TEST_PREDICT_DIR)"
    ]
   },
   {
@@ -562,10 +582,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "kitti_test_predictions = predict_on_dir(yolo_model, sess, TEST_IMAGE_DIR)\n",
-    "write_predictions_on_dir(kitti_test_predictions, TEST_IMAGE_DIR, TEST_PREDICT_DIR)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
