Added 3d location information
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/model_2d_bounding_box.ipynb
+++ b/notebooks/model_2d_bounding_box.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "from typing import Tuple, Optional, Dict\n",
+    "from typing import Tuple, Optional, Dict, Any\n",
     "from matplotlib.pyplot import imshow\n",
     "import tensorflow as tf\n",
     "from keras import backend as K\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,7 @@
     "INVALID_3D_HWL = -1\n",
     "INVALID_3D_LOC = -1000\n",
     "INVALID_RY = -10\n",
+    "TRAIN_LABEL_DIR = os.path.join('..', 'data', 'KITTI', 'training', 'label_2')\n",
     "TRAIN_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
     "                               'training', 'image_2')\n",
     "TEST_IMAGE_DIR = os.path.join('..', 'data', 'KITTI', 'data_object_image_2',\n",
@@ -415,13 +416,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_label_obj(label_line: str) -> Dict[str, Any]:\n",
+    "    \"\"\"Returns a dict with all of the label properties.\n",
+    "    :param label_line: A line from a label file.\n",
+    "    :return: A dict representing the label.\n",
+    "    \"\"\"\n",
+    "    label_arr = label_line.split(' ')\n",
+    "    obj = {}\n",
+    "    obj['type'] = label_arr[0]\n",
+    "    obj['truncation'] = float(label_arr[1])\n",
+    "    obj['occlusion'] = int(label_arr[2])\n",
+    "    obj['alpha'] = float(label_arr[3])\n",
+    "    obj['x1'] = float(label_arr[4])\n",
+    "    obj['y1'] = float(label_arr[5])\n",
+    "    obj['x2'] = float(label_arr[6])\n",
+    "    obj['y2'] = float(label_arr[7])\n",
+    "    obj['height'] = float(label_arr[8])\n",
+    "    obj['width'] = float(label_arr[9])\n",
+    "    obj['length'] = float(label_arr[10])\n",
+    "    obj['tx'] = float(label_arr[11])\n",
+    "    obj['ty'] = float(label_arr[12])\n",
+    "    obj['tz'] = float(label_arr[13])\n",
+    "    obj['ry'] = float(label_arr[14])\n",
+    "    return obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_best_3d_loc(\n",
+    "    label_filename: str,\n",
+    "    box: Tuple[float, float, float, float]) -> Tuple[int, int, int]:\n",
+    "    \"\"\"Returns the 3D object location for the object whose 2D bounding box has\n",
+    "    the highest IoU with the given 2D box, or the invalid location.\n",
+    "    :param label_filename: The complete path to the label file for the image.\n",
+    "    :param box: The 2D bounding box in (x1, y1, x2, y2) order.\n",
+    "    :return: A 3-tuple of (x, y, z) for the best matching object, or the invalid\n",
+    "    location (-1000, -1000, -1000).\n",
+    "    \"\"\"\n",
+    "    with open(label_filename, 'r') as infile:\n",
+    "        labels = [line.strip() for line in infile.readlines()]\n",
+    "    best_iou = 0\n",
+    "    best_obj = None\n",
+    "    for line in labels:\n",
+    "        obj = get_label_obj(line)\n",
+    "        obj_box = obj['x1'], obj['y1'], obj['x2'], obj['y2']\n",
+    "        obj_iou = iou(box, obj_box)\n",
+    "        if obj_iou > best_iou or not best_obj:\n",
+    "            best_iou = obj_iou\n",
+    "            best_obj = obj\n",
+    "    if not best_obj:\n",
+    "        return INVALID_3D_LOC, INVALID_3D_LOC, INVALID_3D_LOC\n",
+    "    return best_obj['tx'], best_obj['ty'], best_obj['tz']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_yolo_predictions(out_scores: np.ndarray, out_boxes: np.ndarray,\n",
     "                           out_classes: np.ndarray, height: int, width: int,\n",
-    "                           dst_filename: str) -> None:\n",
+    "                           dst_filename: str,\n",
+    "                           label_filename: Optional[str] = None) -> None:\n",
     "    \"\"\"Writes the predicted 2D bounding boxes to the destination file. This is\n",
     "    based on writeLabels.m in the KITTI devkit.\n",
     "    :param out_scores: The scores output from the YOLO model prediction.\n",
@@ -431,6 +496,9 @@
     "    :param height: The image height.\n",
     "    :param width: The image width.\n",
     "    :param dst_filename: The filename at which to save the labels.\n",
+    "    :param label_filename: If specified, fill in the 3D location with the data\n",
+    "    from the label file (our model assumes that this data can be obtained from\n",
+    "    lidar sensors).\n",
     "    \"\"\"\n",
     "    output_lines = []\n",
     "    for i, c in reversed(list(enumerate(out_classes))):\n",
@@ -446,6 +514,10 @@
     "        bottom = min(height, np.floor(bottom + 0.5).astype('int32'))\n",
     "        right = min(width, np.floor(right + 0.5).astype('int32'))\n",
     "        score = out_scores[i]\n",
+    "        if label_filename is not None:\n",
+    "            loc_3d = get_best_3d_loc(label_filename, (left, top, right, bottom))\n",
+    "        else:\n",
+    "            loc_3d = INVALID_3D_LOC, INVALID_3D_LOC, INVALID_3D_LOC\n",
     "        label_line = ('{0} {1} {2} {3} {4} {5} {6} {7} {8} {9} {10} {11} '\n",
     "                      '{12} {13} {14} {15}').format(\n",
     "            kitti_class,\n",
@@ -454,7 +526,7 @@
     "            INVALID_ALPHA,\n",
     "            left, top, right, bottom,\n",
     "            INVALID_3D_HWL, INVALID_3D_HWL, INVALID_3D_HWL,\n",
-    "            INVALID_3D_LOC, INVALID_3D_LOC, INVALID_3D_LOC,\n",
+    "            loc_3d[0], loc_3d[1], loc_3d[2],\n",
     "            INVALID_RY,\n",
     "            score)\n",
     "        output_lines.append(label_line)\n",
@@ -511,50 +583,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_predictions_on_dir(\n",
     "    predictions: Dict[str, Tuple[np.ndarray, np.ndarray, np.ndarray]],\n",
     "    image_dir: str,\n",
-    "    output_dir: str) -> None:\n",
+    "    output_dir: str,\n",
+    "    label_dir: Optional[str] = None) -> None:\n",
     "    \"\"\"Writes the predicted 2D bounding boxes to the destination directory.\n",
     "    :param predictions: The predictions on all image files in image_dir.\n",
     "    :param image_dir: The directory containing the images.\n",
     "    :param output_dir: The directory to which to save output files.\n",
+    "    :param label_dir: If specified, used to supply 3D object location\n",
+    "    coordinates.\n",
     "    \"\"\"\n",
     "    for image_file in predictions:\n",
     "        output_file = image_file.replace('.png', '.txt')\n",
+    "        label_file = None if not label_dir else os.path.join(label_dir,\n",
+    "                                                             output_file)\n",
     "        out_scores, out_boxes, out_classes = predictions[image_file]\n",
     "        height, width = get_image_height_width(os.path.join(\n",
     "            image_dir, image_file))\n",
     "        write_yolo_predictions(out_scores, out_boxes, out_classes,\n",
-    "                               height, width, os.path.join(\n",
-    "                                   output_dir, output_file))"
+    "                               height, width,\n",
+    "                               os.path.join(output_dir, output_file),\n",
+    "                               label_filename=label_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "height, width = get_image_height_width(test_image)\n",
     "write_yolo_predictions(out_scores, out_boxes, out_classes, height, width,\n",
-    "                       'test_out.txt')"
+    "                       'test_out.txt',\n",
+    "                       label_filename=os.path.join(TRAIN_LABEL_DIR,\n",
+    "                                                   '000008.txt'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 12%|█▏        | 12/100 [05:45<42:27, 28.95s/it]"
+     ]
+    }
+   ],
    "source": [
     "kitti_train_predictions = predict_on_dir(yolo_model, sess, TRAIN_IMAGE_DIR,\n",
     "                                         max_images=100)\n",
     "write_predictions_on_dir(kitti_train_predictions, TRAIN_IMAGE_DIR,\n",
-    "                         TRAIN_PREDICT_DIR)"
+    "                         TRAIN_PREDICT_DIR, label_dir=TRAIN_LABEL_DIR)"
    ]
   },
   {
