Added dataset function file
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -1,6 +1,20 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "4bai-project",
+   "language": "python",
+   "name": "4bai-project"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
