Added mean IoU for 2d box model
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -730,9 +730,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation\n",
+    "# Evaluation: 2D boxes\n",
     "\n",
-    "In this section, we will evaluate our 2D and 3D bounding box predictions."
+    "In this section, we will evaluate our 2D bounding box predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation: 3D boxes based on 2D predictions\n",
+    "\n",
+    "In this section, we will evaluate our 3D bounding box predictions based on our 2D bounding box predictions.\n",
+    "\n",
+    "## Interpretation of output\n",
+    "\n",
+    "The output of the evaluation cpp file is a little cryptic. It is divided into 2 sections.\n",
+    "\n",
+    "1. Object detection AP: Reports the average precision for object detection on the easy, medium, and hard levels, respectively. The output number in each category represents the percent of objects correctly identified in that class, based on the minimum IoU requirements to consider the object detected. The IoU threshold increases from easy to medium to hard.\n",
+    "1. 3D bounding box AP: Reports the average precision for 3D bounding boxes on the easy, medium, and hard levels, respectively. The output number in each category represents the mean average precision achieved on that class."
    ]
   },
   {
@@ -1244,6 +1269,24 @@
    "metadata": {},
    "source": [
     "### FPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation: 3D boxes based on 2D ground truth\n",
+    "\n",
+    "In this section, we will evaluate our 3D bounding box predictions based on the 2D ground truth labels."
    ]
   },
   {
