--- a/notebooks/model_2d_bounding_box_exploration.ipynb
+++ b/notebooks/model_2d_bounding_box_exploration.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting 2D bounding boxes on KITTI\n",
+    "# Predicting 2D bounding boxes on KITTI based on image directories\n",
     "\n",
     "Now that we have the 2D bounding box (YOLO) model working, we need to predict all of the bounding boxes on KITTI train and test datasets such that the output can be used by the 3D bounding box model. That means we need to output 2 directories of prediction files (for '000001.png', it would be '000001.txt') for training and test images. Each text file needs to be formatted according to the KITTI label file specifications."
    ]
@@ -224,6 +224,75 @@
     "                                          max_images=100)\n",
     "write_predictions_on_dir(kitti_train_predictions, TRAIN_IMAGE_DIR,\n",
     "                         TRAIN_PREDICT_DIR, label_dir=LABEL_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mean_iou(\n",
+    "    predictions: Dict[str, Tuple[np.ndarray, np.ndarray, np.ndarray]],\n",
+    "    labels: Dict[str, List[str]],\n",
+    "    image_dir: str) -> float:\n",
+    "    \"\"\"Returns the mean IoU over all boxes predicted.\n",
+    "    :param predictions: The predictions of the 2D bounding box model.\n",
+    "    :param labels: The labels.\n",
+    "    :param image_dir: The directory in which the images are located.\n",
+    "    :return: The mean IoU.\n",
+    "    \"\"\"\n",
+    "    total_iou = 0\n",
+    "    total_boxes = 0\n",
+    "    for image_file in predictions:\n",
+    "        out_scores, out_boxes, out_classes = predictions[image_file]\n",
+    "        height, width = get_image_height_width(os.path.join(\n",
+    "            image_dir, image_file))\n",
+    "        for box in out_boxes:\n",
+    "            top, left, bottom, right = box\n",
+    "            top = max(0, np.floor(top + 0.5).astype('int32'))\n",
+    "            left = max(0, np.floor(left + 0.5).astype('int32'))\n",
+    "            bottom = min(height, np.floor(bottom + 0.5).astype('int32'))\n",
+    "            right = min(width, np.floor(right + 0.5).astype('int32'))\n",
+    "            best_iou = 0\n",
+    "            for line in labels[image_file]:\n",
+    "                obj = get_label_obj(line)\n",
+    "                obj_box = obj['x1'], obj['y1'], obj['x2'], obj['y2']\n",
+    "                obj_iou = iou(box, obj_box)\n",
+    "                best_iou = max(best_iou, obj_iou)\n",
+    "            total_iou += best_iou\n",
+    "            total_boxes += 1\n",
+    "    return total_iou / total_boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset import get_labels\n",
+    "labels = get_labels(LABEL_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.059306461850777765"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_mean_iou(kitti_train_predictions, labels, TRAIN_IMAGE_DIR)"
    ]
   },
   {
