Added check that ground truth gets 1.0 IoU
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "0.05686985652273623"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9629,7 +9629,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation: frames per second (FPS)"
+    "# Evaluation: frames per second (FPS)\n",
+    "\n",
+    "In this section, we will test the speed of our model's predictions in frames per second."
    ]
   },
   {
